# ml-for-sports-betting

./: .gitignore  LICENSE  README.md  config.toml  plot_figures.ipynb  pyproject.toml
data/input/: results_2015.csv  results_2016.csv  results_2017.csv  results_2018.csv  results_2019.csv  results_and_box_scores_2015.csv  results_and_box_scores_2016.csv  results_and_box_scores_2017.csv  results_and_box_scores_2018.csv  results_and_box_scores_2019.csv  win_pct_2014.json  win_pct_2015.json  win_pct_2016.json  win_pct_2017.json  win_pct_2018.json  winning_percentage_2014.csv  winning_percentage_2015.csv  winning_percentage_2016.csv  winning_percentage_2017.csv  winning_percentage_2018.csv
data/output/central_hypothesis/: accuracy_driven_betting_simulation_metrics.json  accuracy_driven_results.json  calibration_driven_betting_simulation_metrics.json  calibration_driven_results.json  roi.json
data/output/feature_selection/: accuracy_driven_feature_selection.json  calibration_driven_feature_selection.json  drift_detection.json  kolmogorov_smirnov_results.json
data/output/fixed_betting/: accuracy_driven_results.json  calibration_driven_results.json
data/output/hpo/: accuracy_driven_optimal_hyperparameters.json  calibration_driven_optimal_hyperparameters.json
data/output/kelly_betting/: accuracy_driven_results.json  calibration_driven_results.json
data/output/model_selection/: accuracy_driven_best_model.json  accuracy_driven_model_scores.json  calibration_driven_best_model.json  calibration_driven_model_scores.json
data/output/value_bets/: value_bets_prediction_variances.json
src/: feature_engineering.py  feature_extraction.py  feature_selection.py  hpo.py  loader.py  model_selection.py  pipeline.py  plotting.py  run_pipeline.py  simulate.py  utils.py
tests/: test_feature_engineering.py  test_feature_extraction.py  test_feature_selection.py  test_hpo.py  test_loader.py  test_model_selection.py  test_simulate.py  test_utils.py
